# dotfiles

./: .gitignore  LICENSE  README.md  batconfig  create-symbolic-links  dot.yaml  ghosttyconfig  gitconfig  tealdeerconfig.toml  zshrc
bash/: bash_profile  bashrc  dot.yaml
editors/: dot.yaml  nvim-save-head.hook  repro.lua
editors/nvchad/: dark_modern.lua  dot.yaml
editors/nvchad/custom/: chadrc.lua  mappings.lua  plugins.lua
editors/nvim/: .gitignore  .luarc.json  .nvim.lua  .stylua.toml  init.lua
editors/nvim/colors/: adwaita.lua  default_terminal.lua  terminal.lua
editors/nvim/lua/: common.lua  keymaps.lua  (+3 more)
editors/vim/: .vimrc  dot.yaml
ghostty/: config
nvim/: .gitignore  .luarc.json  .stylua.toml  README.md  init.lua
nvim/colors/: terminal.lua
nvim/doc/: configuration.txt  tags
nvim/plugin/: jayvee.lua  lsp.lua  mini.lua  misc.lua  pack.lua  terminal.lua  treesitter.lua
other/: zathurarc
progs/: dot.yaml  fullup  witcher3modmanager
prompt/: Cargo.toml
prompt/src/: ansi.rs  cli.rs  dir.rs  git.rs  main.rs  misc.rs  section.rs
ssh/: config  dot.yaml
terminal/: dot.yaml
terminal/bash/: bashrc
terminal/bat/: config
terminal/ghostty/: config
terminal/kitty/: dark_modern.conf  dot.yaml  kitty.conf  monochrome.conf  nvimcfg
terminal/nushell/: .gitignore  config.nu  env.nu
terminal/prompt/: Cargo.toml
terminal/starship/: dot.yaml  starship.toml
terminal/tmux/: CATPPUCCIN_HACK_TO_HAVE_MY_OWN_COLORS  dot.yaml  tmux.conf
terminal/wezterm/: wezterm.lua
terminal/zsh/: .zshalias  .zshrc  dot.yaml  zshrc
tools/git/: .gitconfig  dot.yaml  gitconfig  gitignore
(+71 files in other folders)
