[package]
name = "prompt"
version = "1.0.1"
edition = "2024"

[dependencies]
git2 = { version = "0.20.2", default-features = false }
libc = { version = "0.2.176", default-features = false }

[lints.clippy]
cast_possible_wrap = "deny"
semicolon_if_nothing_returned = "deny"
needless_pass_by_value = "deny"
if_not_else = "warn"
unreadable_literal = "warn"
needless_for_each = "warn"
unnecessary_semicolon = "deny"
unnested_or_patterns = "warn"
struct_field_names = "warn"
bool_to_int_with_if = "deny"
